@@ -1,5 +1,5 @@
 /* Get time in seconds.
-   Copyright (c) 2005-2010 UnixLib Developers.  */
+   Copyright (c) 2005-2014 UnixLib Developers.  */
 
 #include <kernel.h>
 #include <time.h>
@@ -22,7 +22,7 @@ time (time_t *timep)
     time1 = (time_t) -1;
   else
     {
-      time1 = __cvt_riscos_time (buf[1] & 0xff, buf[0]);
+      time1 = __cvt_riscos_time (buf[1], buf[0]);
 #ifdef DEBUG
       debug_printf ("time():  t1 = %x, b[1] = %x, b[0] = %x\n",
 		    time1, buf[1], buf[0]);
